# transpiler

./: .gitignore  README.md  language.py  pyproject.toml  shell.nix
butterflow/: Prompt.txt  demo.py  old.txt  operators.py  parser.py  parser2.py  parser_old.py  runtime.py  sampler.py  typesystem.py
demo/: demo.py  demo_config.json  demo_input.txt
docs/alpha/: momentum.txt  reversion.txt
docs/language/: spec.txt
docs/operators/: ts_delay.txt  ts_mean.txt
input/: code.txt
output/: spec.txt
src/morpho/: .gitignore  __init__.py  adapters.py  backtest.py  database.py  handler.py  indexer.py  metadata.py  ollama.py  score.py  transpiler.py  util.py  workflow.py
tests/: demo_config.json  morpho  test_indexer.py  test_score.py  test_transpiler.py
tests/test_data/: 01.json  02.json  03.json  04.json
tests/test_data/codes/: test.bf  test.py
tests/test_data/documents/: test.txt
tests/test_data/summaries/: test.txt
tests/test_prompts/: prompt.json
