[project]
name = "morpho"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "butterflow",
    "chromadb>=1.3.5",
    "ollama>=0.6.0",
]
authors = [
{ name = "Jongkook Choi", email = "jongkook90@hotmail.com" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/morpho"]

[tool.uv.sources]
butterflow = { git = "https://github.com/Thessal/butterflow" }
