[project]
name = "morpho"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "butterflow",
    "chromadb>=1.3.5",
    "ollama>=0.6.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.2",
]
authors = [
{ name = "Jongkook Choi", email = "jongkook90@hotmail.com" },
]

[project.optional-dependencies]
api = [
    "google-genai>=1.38.0",
    "openai>=2.7.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/morpho"]

[tool.uv.sources]
butterflow = { git = "https://github.com/Thessal/butterflow" }

